--- a/Content/Home.css
+++ b/Content/Home.css
@@ -412,5 +412,6 @@ body .htcs-tcclass .layui-layer-btn .layui-layer-btn0{    display: inline-block;
     background-color: #fff;
 }
 .fylx{color: #fff;background-color:#ff4b5e;padding: 5px;margin-right:10px;}
+.zfylx{color: #fff;padding: 5px;margin-right:10px;background-color: #1bb974;}
 
 .searchresult{color:#ff4b5e}
