--- a/src/views/bill/z-bill/index.html
+++ b/src/views/bill/z-bill/index.html
@@ -80,7 +80,9 @@
             <ul class="layui-nav toolbar-nav">
                 <li class="layui-nav-item">
                     <a href="javascript:;" class="show-more">操作</a>
-                    <dl class="layui-nav-child"></dl>
+                    <dl class="layui-nav-child">
+                   
+                    </dl>
                 </li>
             </ul>
     </script>
