--- a/src/views/bill/z-bill/receive.html
+++ b/src/views/bill/z-bill/receive.html
@@ -1,12 +1,12 @@
 
-<script type="text/html" template>
-    <script src="{{layui.setter.base }}/Scripts/billlist_business.js"></script>
-</script>
+<script src="../../../../Scripts/billlist_business.js"></script>
 <link href="../../../../Content/Home.css" rel="stylesheet" />
 <link href="../../../../Content/hsc-form.css" rel="stylesheet" />
 <script type="text/html" template >
     {{#  LoadData(d.params.id,d.params.tableid,d.params.layerindex,d.params.btnOption)}}
 </script>
+
+
 <script id="billreceivescript" type="text/html">
     {{# var doc = layui.htcsLG;}}
     <form class="layui-form layui-form-pane hcs-form form-panel" action=""> 
