--- a/src/views/house/d-house/InterView.html
+++ b/src/views/house/d-house/InterView.html
@@ -146,6 +146,7 @@ Layout = null;
         editarea: ['1200px', '90%'],
         tableid: "zcontract-index-table",
         ismuilti:true,
+        url:'contract/z-contract/view',//查看界面路径
         btnview:  "zcontract-button-view",
         toolview: "zcontract-view-btn",
         tooladd:  "zcontract-add-btn",
