--- a/src/views/house/h-house/publicview.html
+++ b/src/views/house/h-house/publicview.html
@@ -254,7 +254,7 @@ img {
                       <div class="layui-inline"> 
                        <label class="layui-form-label">座/栋/号</label> 
                        <div class="layui-input-inline"> 
-                        <input type="text" name="BuildingNumber" autocomplete="off" class="layui-input" value="{{d[1].BuildingNumber}}"  /> 
+                        <input type="text" name="BuildingNumber" autocomplete="off" class="layui-input" value="{{doc.ns(d[1].BuildingNumber)}}"  /> 
                        </div> 
                     </div> 
                        <div class="layui-inline"> 
