--- a/src/views/house/z-house/add.html
+++ b/src/views/house/z-house/add.html
@@ -308,7 +308,7 @@ img {
                       <div class="layui-inline"> 
                        <label class="layui-form-label">座/栋/号</label> 
                        <div class="layui-input-inline"> 
-                        <input type="text" name="BuildingNumber"  lay-verify="required|number" autocomplete="off" class="layui-input"  /> 
+                        <input type="text" name="BuildingNumber"   lay-verify="number" autocomplete="off" class="layui-input"  /> 
                        </div> 
                     </div> 
                        <div class="layui-inline"> 
