--- a/src/views/house/z-house/index.html
+++ b/src/views/house/z-house/index.html
@@ -19,7 +19,7 @@
                 <div class="m-top m-zt-y" id="m-top">
                     <ul>
                         <li>
-                           <span class="housename">{{itemtop.CellName}}-{{itemtop.BuildingNumber}}号-{{itemtop.BuildingNumber}}单元-{{itemtop.RoomId}}室</span>
+                                <span class="zfylx">{{formatter1(itemtop.sign)}}</span> <span class="housename">{{itemtop.Title}}</span>
 
                             <span class="caidan-icon" id="caidan-icon-{{itemtop.Id}}" view="false">
                                 <i class="layui-icon" id="lay-ic-{{itemtop.Id}}" style="font-size:22px;" view="false">&#xe65f;</i>
@@ -44,7 +44,7 @@
                 <div class="m-top m-zt-k" id="m-top">
                     <ul>
                         <li>
-                            <span class="fylx">{{formatter1(itemtop.sign)}}</span><span class="housename">{{itemtop.CellName}}-{{itemtop.BuildingNumber}}号-{{itemtop.BuildingNumber}}单元-{{itemtop.RoomId}}室</span>
+                            <span class="fylx">{{formatter1(itemtop.sign)}}</span><span class="housename">{{itemtop.Title}}</span>
                             <span class="caidan-icon" id="caidan-icon-{{itemtop.Id}}" view="false">
                                 <i class="layui-icon" id="lay-ic-{{itemtop.Id}}" style="font-size:22px;" view="false">&#xe65f;</i>
                             </span>
@@ -84,7 +84,7 @@
                     <form class="layui-form">
                             <div class="layui-form-item">
                                     <div class="layui-form-item" style="margin-bottom:5px;">
-                                            <div class="m-search-item" style="width:300px;">
+                                            <div class="m-search-item" style="width:250px;">
                                                     <input type="text" name="Content" autocomplete="off" class="layui-input" placeholder="小区名,小区地址，房间号，房管员" id="Content">
                                            </div>
                                            <div class="m-search-item">
@@ -96,6 +96,12 @@
                                                     <option value="4">4居</option>
                                                     <option value="5">5居</option>
                                                 </select>
+                                            </div>
+                                            <div class="m-search-item">
+                                                    <select name="storeid" lay-verify="" id="storeid" lay-filter="store">         
+                                                        <option value="">门店</option>
+                                                       
+                                                    </select>
                                             </div>
                                             <div class="m-search-item">
                                                     <select name="Idletime" lay-verify="" lay-filter="Idletime">         
