--- a/src/views/contract/z-contract/view.html
+++ b/src/views/contract/z-contract/view.html
@@ -49,9 +49,10 @@
             <div class="layui-tab-item">
                 <div class="layui-tab layui-tab-brief" lay-filter="billtabletab">
                     <ul class="layui-tab-title" style="margin-bottom:0;">
-                            <li value="2" class="layui-this">所有</li>
-                            <li value="0">未完成</li>
+                         
+                            <li value="0" class="layui-this">未完成</li>
                             <li value="1">已完成</li>
+                            <li value="2" >所有</li>
                     </ul>
                     <div class="layui-tab-content" style="padding:0px;margin:0px;">
                         <table id="bill-main-table-cont" lay-filter="demoEvent3"></table>
@@ -214,18 +215,7 @@
                  <div class="viewyajincontent">
             
                 </div>
-                 <div class="layui-form-item">
-                        <div class="layui-inline">
-                    <label class="layui-form-label">创建人</label>
-                    <div class="layui-input-inline" style="width: 150px;">
-                        <input type="tel" name="CreatePerson" autocomplete="off" value="{{d[1].CreatePerson}}" class="layui-input gray" disabled id="Remark">
-                    </div>
-                    <label class="layui-form-label">创建时间</label>
-                    <div class="layui-input-inline" style="width: 150px;">
-                        <input type="tel" name="CreateTime" autocomplete="off" value="{{d[1].CreateTime}}" class="layui-input gray" disabled id="Remark">
-                    </div>
-                </div>
-                </div>
+                
                     <div class="layui-form-item">
                         <div class="layui-form-item">
                             <label class="layui-form-label">备注</label>
@@ -233,6 +223,18 @@
                                 <input type="tel" name="Remark" autocomplete="off" class="layui-input gray" disabled id="Remark">
                             </div>
                         </div>
+                    </div>
+                    <div class="layui-form-item">
+                            <div class="layui-inline">
+                        <label class="layui-form-label">创建人</label>
+                        <div class="layui-input-inline" style="width: 150px;">
+                            <input type="tel" name="CreatePerson" autocomplete="off" value="{{d[1].CreatePersonstr}}" class="layui-input gray" disabled id="Remark">
+                        </div>
+                        <label class="layui-form-label">创建时间</label>
+                        <div class="layui-input-inline" style="width: 150px;">
+                            <input type="tel" name="CreateTime" autocomplete="off" value="{{d[1].CreateTime}}" class="layui-input gray" disabled id="Remark">
+                        </div>
+                    </div>
                     </div>
                     <div class="layui-form-item">
                         <div class="layui-form-item">
