--- a/src/views/house/h-house/index.html
+++ b/src/views/house/h-house/index.html
@@ -16,7 +16,7 @@
             <div class="m-wrap" id="m-wrap-{{item.house.Id}}">
                 <div class="m-panel-title" id="m-panel-title-{{item.house.Id}}">
                     <div class="panel-name">
-                        <span class="m-title" id="m-title-{{item.house.Id}}">{{item.house.CellName}}·{{item.house.BuildingNumber}}号{{item.house.RoomId}}室</span>
+                        <span class="m-title" id="m-title-{{item.house.Id}}">{{item.house.Title}}</span>
                         <span class="">系统编号:</span>
                         <span class="houseid" id="houseid-{{item.house.Id}}">{{item.house.Id}}</span>
                     </div>
@@ -44,7 +44,7 @@
                         <div class="m-top m-zt-y" id="m-top">
                             <ul>
                                 <li>
-                                    <span class="housename">{{itemtop.Name}}</span>
+                                        <span class="zfylx">{{formatter1(itemtop.sign)}}</span><span class="housename">{{itemtop.Name}}</span>
                                     <span class="caidan-icon" id="caidan-icon-{{itemtop.ID}}" view="false">
                                         <i class="layui-icon" id="lay-ic-{{itemtop.ID}}" style="font-size:22px;" view="false">&#xe65f;</i>
                                     </span>
@@ -109,7 +109,7 @@
                     <form class="layui-form">
                             <div class="layui-form-item">
                                     <div class="layui-form-item" style="margin-bottom:5px;">
-                                            <div class="m-search-item" style="width:300px;">
+                                            <div class="m-search-item" style="width:250px;">
                                                     <input type="text" name="Content" autocomplete="off" class="layui-input" placeholder="小区名,小区地址，房间号，房管员" id="Content">
                                            </div>
                                            <div class="m-search-item">
@@ -121,6 +121,12 @@
                                                     <option value="4">4居</option>
                                                     <option value="5">5居</option>
                                                 </select>
+                                            </div>
+                                            <div class="m-search-item">
+                                                    <select name="storeid" lay-verify="" id="storeid" lay-filter="store">         
+                                                        <option value="">门店</option>
+                                                       
+                                                    </select>
                                             </div>
                                             <div class="m-search-item">
                                                     <select name="Idletime" lay-verify="" lay-filter="Idletime">         
