--- a/src/views/house/rz/index.html
+++ b/src/views/house/rz/index.html
@@ -52,16 +52,20 @@
         {{# }}}
         {{#   });   }}
     </script>
-       <script type="text/html" id="btnintable">
-        
-    </script>
     <div id="toolbar">
         <div class="layui-btn-group">
             <div id="guest-button-view" style="overflow:hidden;"></div>
            
         </div>
     </div>
-    
+    <script type="text/html" id="btnintable">
+        <ul class="layui-nav toolbar-nav">
+            <li class="layui-nav-item">
+                <a href="javascript:;" class="show-more">操作</a>
+                <dl class="layui-nav-child"></dl>
+            </li>
+        </ul>
+</script>
     <div class="layui-tab layui-tab-card" lay-filter="tabletab">
             <ul class="layui-tab-title" style="margin-bottom:0;">
                 <li value="0" class="layui-this">所有</li>
@@ -72,6 +76,10 @@
                 <table id="guest-main-table" lay-filter="demoEvent"></table>
             </div>
         </div>
-
+        <div id="toolbar">
+            <div class="layui-btn-group">
+                <div id="guest-button-view" style="overflow:hidden;"></div>
+            </div>
+        </div>
 </div>
 
