--- a/src/views/house/h-house/InterView.html
+++ b/src/views/house/h-house/InterView.html
@@ -263,6 +263,7 @@ Layout = null;
                       toolview: "ycontract-view-btn",
                       tooladd:  "ycontract-add-btn",
                       tooledit: "ycontract-edit-btn",
+                      url:'contract/y-contract/view',//查看界面路径
                       tooldelete:"ycontract-delete-btn",
                       deletespname:"sp_plyzdeletecontract",
                       menuid:191
