--- a/src/views/house/d-house/InterView.html
+++ b/src/views/house/d-house/InterView.html
@@ -246,6 +246,7 @@ Layout = null;
                       tooledit: "ycontract-edit-btn",
                       tooldelete:"ycontract-delete-btn",
                       deletespname:"sp_plyzdeletecontract",
+                      url:'contract/y-contract/view',//查看界面路径
                       menuid:191
                   };
                   doc.InitButton(BtnOption, ycontractbtnscribt, tableoption);
